--- a/.github/workflows/htmlcheck.yml
+++ b/.github/workflows/htmlcheck.yml
@@ -1,4 +1,5 @@
 name: Proof HTML
+
 on:
   pull_request:
     branches:
@@ -10,4 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: anishathalye/proof-html@v2.0.2
-          with: directory ./pages
+          with:
+            directory: ./pages
