--- a/.github/workflows/htmlcheck.yml
+++ b/.github/workflows/htmlcheck.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: anishathalye/proof-html@v2.0.2
         with:
-          directory: ./pages
+          directory: ./posts
